Small code cleaning